# FlyDetector

./: .gitignore  FlyDetector.pro  README.md  cam.h  filecam.cpp  filecam.h  fly-shaker.rules  flycam.cpp  flycam.h  flycounter.cpp  flycounter.cpp.orig  flycounter.h  flycounter.h.orig  flycountercontroller.cpp  flycountercontroller.h  install.sh  logger.cpp  logger.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  noshaker.cpp  noshaker.h  reflexcam.cpp  reflexcam.h  resources.qrc  sample-settings  samplecam.cpp  samplecam.h  settings.h  shaker.cpp  shaker.h  timer.h  usbshaker.cpp  usbshaker.h  vials.cpp  vials.h  webcamera.cpp  webcamera.h
API/: CMakeLists.txt
API/CMakeModules/: FindGphoto2.cmake
API/python/: CMakeLists.txt  FlyDetector.i  cv_converter.h  opencv.i  test.py
dbscan/: hpdbscan.cpp  hpdbscan.h  main.cpp  points.cpp  points.h  rules.h  space.cpp  space.h  util.h
tools/: transform.py
